# CINE_FLOW

./: .gitignore  CHANGELOG.md  CLAUDE.md  DEPLOYMENT.md  FULL_APPLICATION_OPERATIONAL_AUDIT_REPORT.md  LICENSE  LUT_FEATURE.md  POST_2026-02-19_AUDIT_AND_PATCH_REPORT.md  REVIEW_CORE_FRAME_NOTES_REPORT.md  REVIEW_CORE_PHASE1_HARDENING_REPORT.md  REVIEW_CORE_PHASE1_REPORT.md  REVIEW_CORE_PHASE2_REPORT.md  REVIEW_CORE_PHASE3_REPORT.md  REVIEW_CORE_PHASE4X_PREMIUM_REVIEW_REPORT.md  REVIEW_CORE_PHASE4_CERTIFICATION.md  REVIEW_CORE_PHASE4_FINALISATION_REPORT.md  REVIEW_CORE_PHASE4_PATCH_REPORT.md  REVIEW_CORE_PHASE4_REPORT.md  ReviewCore_FeedbackUX_PatchReport.md  ReviewCore_FrameNotes_Finalisation.md  ReviewCore_Stability_Certification.md  SAFE_COPY_CERTIFICATION_REPORT.md  SAFE_COPY_QUEUE_TEST_MATRIX.md  UI_AUDIT_REPORT.md  developer.key  index.html  package-lock.json  package.json  vite.config.ts
docs/: DISTRIBUTION_GUIDE.md  Guide_CineFlow_V1.md  NAS_DEPLOYMENT_GUIDE.md  SHOT_PLANNER_JUMPS_STRUGGLE.md  index.html
licensing-server/: .gitignore  Dockerfile  admin.js  (+5 more)
src-tauri/: Cargo.toml  Info.plist  embedded.provisionprofile  entitlements.plist  entitlements.sidecar.plist  tauri.conf.json  windows-app.manifest
src-tauri/.cargo/: config.toml
src-tauri/Frameworks/QtUiPlugin.framework/Versions/5/Resources/: Info.plist
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/libs/: gk.dylib  libtbb.dylib  libtbbmalloc.dylib  mt.dylib
src-tauri/src/: audio.rs  clustering.rs  commands.rs  db.rs  export.rs  ffprobe.rs  folders.rs  jobs.rs  lib.rs  license.rs  lut.rs  mac_bookmarks.rs  main.rs  perf.rs  production_calibration.rs  production_match_lab.rs  scanner.rs  thumbnail.rs  tools.rs  verification.rs
src-tauri/src/review_core/: mod.rs  processor.rs  server.rs  storage.rs
(+64 files in other folders)
